# SPELL

./: CMakeGenTranslations.txt  CMakeLists.txt  Readme.md  compile_win.bat
colormaps/: magma.cmap
libs/libdata/: CMakeLists.txt
libs/libdata/include/: IntermediateDataStructure.h
libs/libdata/src/: AudioData.cpp  AudioData.h  AutoNumberLabelTrack.cpp  AutoNumberLabelTrack.h  IDSStatus.h  IntegerLabelTrack.cpp  IntegerLabelTrack.h  IntermediateDataStructure.cpp  Label.h  LabelTrack.h  LabelType.h  Sample.cpp  Sample.h  TextLabelTrack.cpp  TextLabelTrack.h  WordLabelTrack.cpp  WordLabelTrack.h
libs/libspell/: CMakeLists.txt
libs/libspell/include/: test.h
libs/libspell/libparser/lib/: CMakeLists.txt
libs/libspell/src/: test.cpp
models/phoneme_consonants_cnn/: keras_metadata.pb  saved_model.pb
models/phoneme_consonants_cnn/variables/: variables.data-00000-of-00001  variables.index
models/phoneme_vowel_cnn/: keras_metadata.pb  saved_model.pb
models/phoneme_vowel_cnn/variables/: variables.data-00000-of-00001  variables.index
models/phoneme_vowel_or_consonant_cnn/: keras_metadata.pb  saved_model.pb
models/phoneme_vowel_or_consonant_cnn/variables/: variables.data-00000-of-00001  variables.index
scripts/: classify_phonemes.py  num_to_consonants.pickle  num_to_vowels.pickle
src/: CMakeLists.txt  main.cpp
src/control/: CMakeLists.txt  Control.cpp  Control.h
src/ts/: CMakeLists.txt  spell_en_US.ts  spell_es_US.ts
src/views/: CMakeLists.txt  SPELLMainWindow.cpp  SPELLMainWindow.h  SPELLMainWindow.ui  TrackManager.cpp  TrackManager.h  TrackManager.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
src/widgets/: CMakeLists.txt  FullWaveDrawWidget.cpp  FullWaveDrawWidget.h  SpectrogramViewWidget.cpp  SpectrogramViewWidget.h  TimelineView.cpp  TimelineView.h  WaveDrawWidget.cpp  WaveDrawWidget.h  readme.md
tests/: main.cpp
